# yank-path

./: .dockerignore  .mise.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  deny.toml  docker-compose.yml
.aider-desk/shiki/outputs/handoff/: 2026-07-05-1852-vcs-integration-tests.md
.github/workflows/: cd.yml  ci.yml  docker.yml  release.yml  reusable.docker.yml  reusable.rust-checks.yml  security.yml
benches/: parsers.rs
src/: app.rs  cli.rs  clipboard.rs  error.rs  fs.rs  gitroot.rs  glob.rs  lib.rs  main.rs  resolve.rs  vcs.rs
src/anchor/: absolute.rs  base.rs  git.rs  home.rs  mod.rs  parent.rs  relative_to.rs  vcs.rs
tests/: anchors.rs  cli.rs  completions.rs  glob.rs  vcs.rs
tests/common/: mod.rs
